[package]
name = "help-me-it"
description = "High-performance mcp server for Helping With IT tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
rmcp = { version = "0.7", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }

# reqwest = { version = "0.12.23", features = ["json"] }
# hyper = { version = "1.7.0", features = ["full"] }
# tower-service = "0.3"
# schemars = "0.8"
